FIX: Question label spacing correction and moving UI system configuration elements such as logo, colours to the User Interface section.
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10353 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -317,7 +317,7 @@ a:hover .fa,.fa:hover {text-decoration:none !important;} /* Never underline a Fo
 #CentralSpaceLogin form {margin:0;padding:0;}
 .Question{padding: 0.7em 0em 0.7em 0.5em;}
 .QuestionSubmit{ padding: 1em 0em 1em 0.5em;}
-.Question label, .QuestionSubmit label{	width: 300px;float: left;margin-top: 0.4em;padding-right:10px;}
+.Question label, .QuestionSubmit label{	width: 300px;float: left;margin-top: 0.3em;padding-right:10px;}
 .Question .customFieldLabel { width: auto; margin: 0;}
 .Question .customFieldset { padding: 0; border: 0;}
 .Question #capswarning { margin-left: 190px; display: none; color: red;font-weight: bold;}
